@@ -2,6 +2,9 @@ Open-MX 1.0.902 aka 1.1-rc2
 ========================================================
 
 Changes:
+* Add --enable-multilib to build both 32bit and 64bit libraries,
+  + Install them in lib32/ and lib64/ and symlink lib to the one
+    that corresponds to the compiler default pointer size.
 * Enable thread-safety by default.
 * The OMX_IFACES variable in open-mx.conf replaces the old IFACES.
 * make install does not build anymore, make should be invoked first.
